--- a/frontend/src/user/pages/Home/Home.css
+++ b/frontend/src/user/pages/Home/Home.css
@@ -1,5 +1,5 @@
 :root{
-  --video-poster: url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1600&auto=format&fit=crop');
+  --video-poster: url('https://res.cloudinary.com/dbifhgaic/image/upload/v1762072972/habitats_hero_savanna_uqvdvz.jpg');
   --cta-image: url('https://images.unsplash.com/photo-1612178537257-4a7a3f2ee5ea?q=80&w=2000&auto=format&fit=crop');
 
   --bg: #073c3f;            /* nền xanh đậm của trang */
